--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Research Portfolio</title>
+    <title>Saatvik Amravathi - Research Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -492,17 +492,17 @@
                 <div class="about-layout">
                     <div class="sidebar">
                         <div class="profile-photo">
-                            <img src="https://dl.dropboxusercontent.com/s/YOUR_DROPBOX_KEY/profile-photo.jpg" alt="Your Name" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                            <img src="https://dl.dropboxusercontent.com/scl/fi/miulid1i0plddmh8msuuk/saatvik_amravathi.jpg?rlkey=ae79tpnpgkb8k0u4v38k3zug4" alt="Your Name" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                         </div>
                         <div class="profile-name">
                             <h1>Your Name</h1>
                         </div>
                         <div class="profile-title">
-                            Data Visualization Researcher
+                            Senior @ Cornell
                         </div>
                         
                         <div class="social-links">
-                            <a href="#" class="social-link">your.email@institution.edu</a>
+                            <a href="#" class="social-link">sa983@cornell.edu</a>
                             <a href="#" class="social-link">GitHub</a>
                             <a href="#" class="social-link">Twitter</a>
                             <a href="#" class="social-link">LinkedIn</a>
@@ -538,19 +538,25 @@
                         <!-- Project 1 -->
                         <div class="project-card">
                             <div class="project-content">
-                                <h3>Urban Demographics Mapping</h3>
-                                <div class="project-meta">R • ggplot2 • sf • leaflet</div>
+                                <h3>Measuring Residential Segregation in Upstate New York</h3>
+                                <div class="project-meta">R • ggplot2 • sf • tidycensus</div>
                             </div>
                             <div class="project-gallery">
                                 <div class="gallery-container">
                                     <div class="gallery-slide">
-                                        <img src="https://dl.dropboxusercontent.com/s/YOUR_DROPBOX_KEY/urban-demo-1.png" alt="Population Density Analysis">
+                                        <img src="https://dl.dropboxusercontent.com/scl/fi/v2rsoi116c90xim82wknh/dissimilarity_income.png?rlkey=e17x4uba9uirrz1nx0ckvvm5m" alt="Racial Segregation on Income">
                                     </div>
                                     <div class="gallery-slide">
-                                        <img src="https://dl.dropboxusercontent.com/s/YOUR_DROPBOX_KEY/urban-demo-2.png" alt="Age Structure Visualization">
+                                        <img src="https://dl.dropboxusercontent.com/scl/fi/bjuhouk5a68prll9yydxr/buffalo-dissimilarity-index.png?rlkey=bctlkf66bvm8lt0j4ums0cnj5" alt="Buffalo Dissimilarity Index Map">
                                     </div>
                                     <div class="gallery-slide">
-                                        <img src="https://dl.dropboxusercontent.com/s/YOUR_DROPBOX_KEY/urban-demo-3.png" alt="Temporal Change Analysis">
+                                        <img src="https://dl.dropboxusercontent.com/scl/fi/j4f2e9qmo4i7q67edxk2g/rochester-dissimilarity-index.png?rlkey=8t8pww70lpomnp2mrpwtqowwj" alt="Rochester Dissimilarity Index Map">
+                                    </div>
+                                    <div class="gallery-slide">
+                                        <img src="https://dl.dropboxusercontent.com/scl/fi/sfj1ykgadq955fs8mom76/buffalo-entropy-index.png?rlkey=uyhg2d6gsotmyxt2dj2fw5voq" alt="Buffalo Racial Entropy Map">
+                                    </div>
+                                    <div class="gallery-slide">
+                                        <img src="https://dl.dropboxusercontent.com/scl/fi/qx1ure2r5j7zy0g1n7jgt/rochester-entropy-index.png?rlkey=p6bksk0rfxjwexkqadzrn8iq9" alt="Rochester Racial Entropy Map">
                                     </div>
                                 </div>
                                 <button class="gallery-nav prev" onclick="changeSlide(0, -1)">‹</button>
@@ -562,61 +568,7 @@
                                 </div>
                             </div>
                             <div class="project-description">
-                                <p>This project examines demographic patterns across urban environments using American Community Survey data. Employing advanced cartographic techniques, the analysis reveals spatial clustering of socioeconomic indicators and their temporal evolution. The methodology integrates statistical modeling with geographic information systems to produce publication-quality visualizations suitable for academic and policy applications.</p>
-                            </div>
-                        </div>
-
-                        <!-- Project 2 -->
-                        <div class="project-card">
-                            <div class="project-content">
-                                <h3>Environmental Monitoring</h3>
-                                <div class="project-meta">R • tidyverse • raster • satellite imagery</div>
-                            </div>
-                            <div class="project-gallery">
-                                <div class="gallery-container">
-                                    <div class="gallery-slide">
-                                        <img src="https://dl.dropboxusercontent.com/s/YOUR_DROPBOX_KEY/env-monitor-1.png" alt="Climate Variable Mapping">
-                                    </div>
-                                    <div class="gallery-slide">
-                                        <img src="https://dl.dropboxusercontent.com/s/YOUR_DROPBOX_KEY/env-monitor-2.png" alt="Vegetation Index Analysis">
-                                    </div>
-                                </div>
-                                <button class="gallery-nav prev" onclick="changeSlide(1, -1)">‹</button>
-                                <button class="gallery-nav next" onclick="changeSlide(1, 1)">›</button>
-                                <div class="gallery-controls">
-                                    <div class="gallery-dot active" onclick="setSlide(1, 0)"></div>
-                                    <div class="gallery-dot" onclick="setSlide(1, 1)"></div>
-                                </div>
-                            </div>
-                            <div class="project-description">
-                                <p>A comprehensive analysis of environmental variables using satellite imagery and ground-based measurements. This research employs advanced statistical techniques to identify long-term trends in climate data. The visualization framework developed for this project has been adopted by environmental monitoring agencies for operational use.</p>
-                            </div>
-                        </div>
-
-                        <!-- Project 3 -->
-                        <div class="project-card">
-                            <div class="project-content">
-                                <h3>Transportation Networks</h3>
-                                <div class="project-meta">R • igraph • network analysis • graph theory</div>
-                            </div>
-                            <div class="project-gallery">
-                                <div class="gallery-container">
-                                    <div class="gallery-slide">
-                                        <img src="https://dl.dropboxusercontent.com/s/YOUR_DROPBOX_KEY/transport-1.png" alt="Network Topology Analysis">
-                                    </div>
-                                    <div class="gallery-slide">
-                                        <img src="https://dl.dropboxusercontent.com/s/YOUR_DROPBOX_KEY/transport-2.png" alt="Flow Pattern Mapping">
-                                    </div>
-                                </div>
-                                <button class="gallery-nav prev" onclick="changeSlide(2, -1)">‹</button>
-                                <button class="gallery-nav next" onclick="changeSlide(2, 1)">›</button>
-                                <div class="gallery-controls">
-                                    <div class="gallery-dot active" onclick="setSlide(2, 0)"></div>
-                                    <div class="gallery-dot" onclick="setSlide(2, 1)"></div>
-                                </div>
-                            </div>
-                            <div class="project-description">
-                                <p>This study applies network analysis techniques to urban transportation systems, examining connectivity patterns and identifying critical infrastructure nodes. The research combines graph theory with geospatial analysis to provide insights for transportation planning and resilience assessment.</p>
+                                <p>This project analyzes patterns of residential segregation across metropolitan areas in Upstate New York using American Community Survey data. The study employs multiple segregation indices and spatial analysis techniques to examine how racial and ethnic segregation varies across different geographic scales and time periods.</p>
                             </div>
                         </div>
                     </div>
