--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <header>
         <div class="container">
             <div class="nav-container">
-                <div class="logo">Your Name</div>
+                <div class="logo">Saatvik Amravathi</div>
                 <div class="nav-tabs">
                     <button class="nav-tab active" data-tab="about">About</button>
                     <button class="nav-tab" data-tab="projects">Projects</button>
@@ -495,7 +495,7 @@
                             <img src="https://dl.dropboxusercontent.com/scl/fi/miulid1i0plddmh8msuuk/saatvik_amravathi.jpg?rlkey=ae79tpnpgkb8k0u4v38k3zug4" alt="Your Name" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                         </div>
                         <div class="profile-name">
-                            <h1>Your Name</h1>
+                            <h1>Saatvik Amravathi</h1>
                         </div>
                         <div class="profile-title">
                             Senior @ Cornell
