--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
                 <div class="about-layout">
                     <div class="sidebar">
                         <div class="profile-photo">
-                            <img src="https://dl.dropboxusercontent.com/scl/fi/miulid1i0plddmh8msuuk/saatvik_amravathi.jpg?rlkey=ae79tpnpgkb8k0u4v38k3zug4" alt="Your Name" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
+                            <img src="https://dl.dropboxusercontent.com/scl/fi/miulid1i0plddmh8msuuk/saatvik_amravathi.jpg?rlkey=ae79tpnpgkb8k0u4v38k3zug4" alt="Saatvik Amravathi" style="width: 100%; height: 100%; object-fit: cover; border-radius: 50%;">
                         </div>
                         <div class="profile-name">
                             <h1>Saatvik Amravathi</h1>
