--- a/index.html
+++ b/index.html
@@ -498,14 +498,14 @@
                             <h1>Saatvik Amravathi</h1>
                         </div>
                         <div class="profile-title">
-                            Senior @ Cornell
+                            Senior @ Cornell & RA @ Natl' Zoning Atlas
                         </div>
                         
                         <div class="social-links">
-                            <a href="#" class="social-link">sa983@cornell.edu</a>
-                            <a href="#" class="social-link">GitHub</a>
-                            <a href="#" class="social-link">Twitter</a>
-                            <a href="#" class="social-link">LinkedIn</a>
+                            <<a href="mailto:sa983@cornell.edu" class="social-link">sa93@cornell.edu</a>
+                            <a href="https://github.com/sa983" class="social-link">GitHub</a>
+                            <a href="https://twitter.com/SAmravathi" class="social-link">Twitter</a>
+                            <a href="https://linkedin.com/in/saatvik0" class="social-link">LinkedIn</a>
                         </div>
                     </div>
 
