--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@
     <header>
         <div class="container">
             <div class="nav-container">
-                <div class="logo">Saatvik Amravathi</div>
+                <div class="logo">Saatvik's Portfolio</div>
                 <div class="nav-tabs">
                     <button class="nav-tab active" data-tab="about">About</button>
                     <button class="nav-tab" data-tab="projects">Projects</button>
@@ -502,7 +502,7 @@
                         </div>
                         
                         <div class="social-links">
-                            <<a href="mailto:sa983@cornell.edu" class="social-link">sa93@cornell.edu</a>
+                            <a href="mailto:sa983@cornell.edu" class="social-link">sa983@cornell.edu</a>
                             <a href="https://github.com/sa983" class="social-link">GitHub</a>
                             <a href="https://twitter.com/SAmravathi" class="social-link">Twitter</a>
                             <a href="https://linkedin.com/in/saatvik0" class="social-link">LinkedIn</a>
