--- a/index.html
+++ b/index.html
@@ -434,8 +434,54 @@
             right: 10px;
         }
 
+        /* Footer Section */
+        footer {
+            position: relative;
+            height: 400px;
+            background: linear-gradient(to bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,0.8) 50%, rgba(255,255,255,1) 100%);
+            margin-top: 80px;
+            overflow: hidden;
+            transition: background 0.3s ease;
+        }
+
+        body.dark-mode footer {
+            background: linear-gradient(to bottom, rgba(26,26,26,0) 0%, rgba(26,26,26,0.8) 50%, rgba(26,26,26,1) 100%);
+        }
+
+        .footer-image {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            z-index: -1;
+            opacity: 0.6;
+            transition: opacity 0.3s ease;
+        }
+
+        body.dark-mode .footer-image {
+            opacity: 0.4;
+        }
+
+        .footer-content {
+            position: absolute;
+            bottom: 30px;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: center;
+            color: #666;
+            font-size: 0.9rem;
+            z-index: 1;
+            transition: color 0.3s ease;
+        }
+
+        body.dark-mode .footer-content {
+            color: #999;
+        }
+
         /* Mobile Responsive */
-                    @media (max-width: 768px) {
+        @media (max-width: 768px) {
             .container {
                 padding: 0 20px;
             }
@@ -469,6 +515,11 @@
             .project-gallery {
                 height: 250px;
             }
+
+            footer {
+                height: 250px;
+                margin-top: 60px;
+            }
         }
     </style>
 </head>
@@ -480,6 +531,7 @@
                 <div class="nav-tabs">
                     <button class="nav-tab active" data-tab="about">About</button>
                     <button class="nav-tab" data-tab="projects">Projects</button>
+                    <div class="theme-toggle" onclick="toggleTheme()"></div>
                 </div>
             </div>
         </div>
@@ -565,6 +617,8 @@
                                     <div class="gallery-dot active" onclick="setSlide(0, 0)"></div>
                                     <div class="gallery-dot" onclick="setSlide(0, 1)"></div>
                                     <div class="gallery-dot" onclick="setSlide(0, 2)"></div>
+                                    <div class="gallery-dot" onclick="setSlide(0, 3)"></div>
+                                    <div class="gallery-dot" onclick="setSlide(0, 4)"></div>
                                 </div>
                             </div>
                             <div class="project-description">
@@ -576,6 +630,14 @@
             </div>
         </div>
     </main>
+
+    <!-- Footer with blended image -->
+    <footer>
+        <img src="https://dl.dropboxusercontent.com/scl/fi/zfv32iaz1gwl13v0qn6j3/Screenshot-2025-07-10-at-9.52.20-PM.png?rlkey=9eupnxf84res7rmiyt381guab" alt="" class="footer-image">
+        <div class="footer-content">
+            <p>© 2025 Saatvik Amravathi</p>
+        </div>
+    </footer>
 
     <script>
         // Tab switching functionality
