--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
 
     <!-- Footer with blended image -->
     <footer>
-        <img src="https://dl.dropboxusercontent.com/scl/fi/zfv32iaz1gwl13v0qn6j3/Screenshot-2025-07-10-at-9.52.20-PM.png?rlkey=9eupnxf84res7rmiyt381guab" alt="" class="footer-image">
+        <img src="https://dl.dropboxusercontent.com/scl/fi/4kqadwdkcum31tuqwwibb/footer.png?rlkey=spgca16uturns6h2ujgpn16vo" alt="" class="footer-image">
         <div class="footer-content">
             <p>© 2025 Saatvik Amravathi</p>
         </div>
