--- a/index.html
+++ b/index.html
@@ -34,17 +34,16 @@
 
         /* Header and Navigation */
         header {
-            background-color: #ffffff;
+            background-image: url('https://dl.dropboxusercontent.com/scl/fi/4kqadwdkcum31tuqwwibb/footer.png?rlkey=spgca16uturns6h2ujgpn16vo');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
             position: fixed;
             width: 100%;
             top: 0;
             z-index: 1000;
             padding: 30px 0;
             transition: background-color 0.3s ease;
-            background-image: url('https://dl.dropboxusercontent.com/scl/fi/4kqadwdkcum31tuqwwibb/footer.png?rlkey=spgca16uturns6h2ujgpn16vo');
-            background-size: cover;
-            background-position: center;
-            background-blend-mode: overlay;
         }
 
         header::before {
@@ -56,10 +55,6 @@
             bottom: 0;
             background: rgba(255, 255, 255, 0.9);
             transition: background 0.3s ease;
-        }
-
-        body.dark-mode header {
-            background-color: #1a1a1a;
         }
 
         body.dark-mode header::before {
@@ -148,6 +143,33 @@
             transform: translateX(25px);
         }
 
+        /* Header Image Banner */
+        .header-banner {
+            position: relative;
+            height: 400px;
+            background-image: url('https://dl.dropboxusercontent.com/scl/fi/4kqadwdkcum31tuqwwibb/footer.png?rlkey=spgca16uturns6h2ujgpn16vo');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            margin-top: 90px;
+            overflow: hidden;
+        }
+
+        .header-banner::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(to bottom, rgba(255,255,255,0.3) 0%, rgba(255,255,255,0.6) 70%, rgba(255,255,255,1) 100%);
+            transition: background 0.3s ease;
+        }
+
+        body.dark-mode .header-banner::before {
+            background: linear-gradient(to bottom, rgba(26,26,26,0.3) 0%, rgba(26,26,26,0.6) 70%, rgba(26,26,26,1) 100%);
+        }
+
         /* Main Content */
         main {
             margin-top: 120px;
@@ -168,6 +190,7 @@
             gap: 80px;
             min-height: calc(100vh - 120px);
             padding: 40px 0;
+            margin-top: 0;
         }
 
         .sidebar {
@@ -576,6 +599,16 @@
 
             .project-gallery {
                 height: 250px;
+            }
+
+            .header-banner {
+                height: 250px;
+                margin-top: 70px;
+            }
+
+            .header-banner {
+                height: 250px;
+                margin-top: 70px;
             }
 
             footer {
