--- a/index.html
+++ b/index.html
@@ -611,6 +611,34 @@
                             <div class="project-description">
                                 <p>This project analyzes patterns of residential segregation across metropolitan areas in Upstate New York using American Community Survey data. The study employs multiple segregation indices and spatial analysis techniques to examine how racial and ethnic segregation varies across different geographic scales and time periods.</p>
                             </div>
+                        <!-- Project 2 -->
+                        <div class="project-card">
+                            <div class="project-content">
+                                <h3>Job Matching Field Experiment</h3>
+                                <div class="project-meta">Python • pandas • matplotlib • seaborn</div>
+                            </div>
+                            <div class="project-gallery">
+                                <div class="gallery-main">
+                                    <img src="https://dl.dropboxusercontent.com/scl/fi/jgjt8nrofvctu2qfio3yi/results_field.png?rlkey=27ds9s5vcbsam7xh7oh4l3mou" alt="Job Matching Results Overview" class="active">
+                                    <img src="https://dl.dropboxusercontent.com/scl/fi/gpv2rnp2bm5eoc5a3t5r2/Logit1.png?rlkey=qgpo0b4ac95o5gmsq0p0apaeu" alt="Matching Algorithm Performance">
+                                    <img src="https://dl.dropboxusercontent.com/scl/fi/razap2vucse7blk20q7ag/Logit2.png?rlkey=bm4slkhr0vuubt01j5xu4w7zz" alt="Field Experiment Outcomes">
+                                </div>
+                                <div class="gallery-thumbnails">
+                                    <div class="thumbnail active" onclick="selectImage(1, 0)">
+                                        <img src="https://dl.dropboxusercontent.com/scl/fi/jgjt8nrofvctu2qfio3yi/results_field.png?rlkey=27ds9s5vcbsam7xh7oh4l3mou" alt="Job Matching Results Overview">
+                                    </div>
+                                    <div class="thumbnail" onclick="selectImage(1, 1)">
+                                        <img src="https://dl.dropboxusercontent.com/scl/fi/gpv2rnp2bm5eoc5a3t5r2/Logit1.png?rlkey=qgpo0b4ac95o5gmsq0p0apaeu" alt="Matching Algorithm Performance">
+                                    </div>
+                                    <div class="thumbnail" onclick="selectImage(1, 2)">
+                                        <img src="https://dl.dropboxusercontent.com/scl/fi/razap2vucse7blk20q7ag/Logit2.png?rlkey=bm4slkhr0vuubt01j5xu4w7zz" alt="Field Experiment Outcomes">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="project-description">
+                                <p>A randomized controlled trial examining the effectiveness of algorithmic job matching systems in improving employment outcomes. This field experiment tested various matching algorithms against traditional job search methods, analyzing their impact on job placement rates, wage outcomes, and job satisfaction across different demographic groups.</p>
+                            </div>
+                        </div>
                         </div>
                     </div>
                 </div>
