--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saatvik Amravathi - Research Portfolio</title>
+    <title>Saatvik Amravathi</title>
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -609,13 +609,13 @@
                                 </div>
                             </div>
                             <div class="project-description">
-                                <p>This project analyzes patterns of residential segregation across metropolitan areas in Upstate New York using American Community Survey data. The study employs multiple segregation indices and spatial analysis techniques to examine how racial and ethnic segregation varies across different geographic scales and time periods.</p>
+                                <p>As part of the final project for ECON 3465, I explored different ways to measure residential segregation and its effects in Upstate New York. I used data from the American Community Survey along with two different techniques, dissimilarity indices and entropy indices (Theil’s H), to map racial segregation in two Upstate cities: Buffalo and Rochester. I also regressed these measures with income, highlighting the correlation between segregation and urban poverty. My work provided background for our group’s proposed evaluation of New York’s Making Moves Program, a housing choice voucher system targeting racial imbalances.</p>
                             </div>
                         <!-- Project 2 -->
                         <div class="project-card">
                             <div class="project-content">
                                 <h3>Job Matching Field Experiment</h3>
-                                <div class="project-meta">Python • pandas • matplotlib • seaborn</div>
+                                <div class="project-meta">Qualtrics • Prolific • tidyverse</div>
                             </div>
                             <div class="project-gallery">
                                 <div class="gallery-main">
@@ -636,7 +636,7 @@
                                 </div>
                             </div>
                             <div class="project-description">
-                                <p>A randomized controlled trial examining the effectiveness of algorithmic job matching systems in improving employment outcomes. This field experiment tested various matching algorithms against traditional job search methods, analyzing their impact on job placement rates, wage outcomes, and job satisfaction across different demographic groups.</p>
+                                <p>I independently designed and ran this field experiment as my final project for ECON 3488. This field experiment tested the effect that the length of job descriptions had on a candidate's propensity to apply. This experiment is based on prior research that has established how the design of job applications can perpetuate applicant gender imbalance along with growing media attention over high applicant attrition rates. As part of this project, I recruited participants, randomized them, collected data through Qualtrics, analyzed the data using R, and followed open source research practices throughout. The plots above show results from the experiment and a logit regression which breaks down the impact of candidate characteristics on decision making.</p>
                             </div>
                         </div>
                         </div>
