--- a/index.html
+++ b/index.html
@@ -694,15 +694,15 @@
         const imageDescriptions = {
             0: [
                 "This scatter plot shows the relationship between racial segregation (measured by dissimilarity index) and median household income across census tracts in Buffalo and Rochester. Each point represents a census tract, demonstrating how areas with higher racial segregation tend to correlate with lower household incomes.",
-                "Choropleth map of Buffalo showing the Black-White dissimilarity index by census tract. Darker shades indicate higher levels of racial segregation, with values ranging from 0 (completely integrated) to 1 (completely segregated). The map reveals distinct spatial patterns of segregation across the city.",
-                "Choropleth map of Rochester displaying the Black-White dissimilarity index by census tract. The color gradient represents varying levels of racial segregation throughout the metropolitan area, highlighting neighborhood-level disparities in racial composition.",
+                "Choropleth map of Buffalo showing the Black-White dissimilarity index by census tract. Darker shades show that the tract is more segregated than its peers. The map reveals the presence of segregation alongside Main Street with the East Side being home to a majority of the city's Black residents while the West Side remains predominantly White.",
+                "Choropleth map of Rochester displaying the Black-White dissimilarity index by census tract. Darker shades show that the tract is more segregated than its peers. The map reveals that Rochester's urban core is highly segregated while its suburbs are more racially integrated.",
                 "Buffalo racial entropy map using Theil's H index to measure diversity across census tracts. Higher values (darker colors) indicate greater racial diversity, while lower values show areas with less racial mixing. This provides an alternative measure to complement the dissimilarity analysis.",
                 "Rochester racial entropy map showing Theil's H diversity index by census tract. The visualization captures the spatial distribution of racial diversity throughout Rochester, offering insights into patterns of integration and segregation using entropy-based measures."
             ],
             1: [
                 "Summary visualization of field experiment results showing the effect of job description length on application rates. The chart displays mean application rates across different treatment groups, with confidence intervals indicating statistical significance of the observed differences.",
-                "Logistic regression results examining the relationship between job description characteristics and application probability. The coefficient plot shows estimated effects with confidence intervals, revealing which factors significantly influence candidate decision-making in the job application process.",
-                "Secondary analysis from the field experiment showing how individual participant characteristics (demographics, experience, etc.) interact with the treatment effects. This regression helps identify which types of candidates are most sensitive to job description length variations."
+                "Logistic Regression from the field experiment showing how individual participant characteristics (demographics, experience, etc.) interact with the treatment effects. This regression helps identify which types of candidates are most sensitive to job description length variations.",
+                "Logistic Regression for a subsample of applicants for positions in the technology sector where job description length is salient. The regression highlights that duration spent on the survey, skill, and experience coincide with applicant's choosing the longer job description."
             ]
         };
 
